@@ -1,6 +1,9 @@
 #define STRING_SHORT    512
 #define STRING_LONG     2048
 
+#define FLAG_CHANOP	0x0001
+#define FLAG_CHANVOICE	0x0002
+
 extern int wsock;
 extern int sockerr;
 extern int optlen;
@@ -136,12 +139,13 @@ extern struct sendq
  *sendqhead, *sendqtail;
 
 extern struct userlist
-{								/* internal userlist */
+{					/* internal userlist */
 	char chan[STRING_SHORT];
 	char nick[STRING_SHORT];
 	char uh[STRING_SHORT];
-	long level;					/* auth */
-	short global;				/* Global user? */
+	long flags;			/* op/voice/etc */
+	long level;			/* auth */
+	short global;			/* Global user? */
 	long idle;
 	struct userlist *next;
 }
